css/style.css
/* ... */
#sponsors #partners {
  margin: 40px 0 0;
}
#sponsors #umd-partners {
  margin: 0;
}
#sponsors .sponsor {
  display: inline-block;
  transition: opacity 0.4s ease-out;
  opacity: 0.6;
  padding: 10px;
}
#sponsors .sponsor:hover {
  opacity: 1;
}
#sponsors .sponsor img {
  max-width: 100%;
}

#faq p {
    text-align: left;
}

@media only screen and (min-width: 1280px) {
  #support {
    padding: 0 12vw;
  }
}
#support #partners {
  margin: 40px 0 0;
}
#support #umd-partners {
  margin: 0;
}
#support .sponsor {
  display: inline-block;
  transition: opacity 0.4s ease-out;
  opacity: 0.6;
  padding: 10px;
}
#support .sponsor:hover {
  opacity: 1;
}
#support .sponsor img {
  max-width: 100%;
}

/* BOOSTRAP CUSTOMIZATION
================================================== */
.navbar {margin-bottom:0;}
.navbar-default {background:none; border:none;}
.nav.nav-tabs {margin-bottom:22px;}
.btn:active, .btn.active{
-webkit-box-shadow:none;box-shadow:none
}
.container .jumbotron{border-radius: 0;}
.jumbotron {font-size: 16px;}
.jumbotron h1 {text-align: left;}
/*forms*/
.form-control {-webkit-box-shadow:none;box-shadow:none}
.has-error div {padding: 5px;
margin-bottom: 20px;
display:block;
}

#twitter-widget-0 {
    position: absolute;
    bottom: 5px;
    left: 60%;
}

/*tabs*/
.panel-default>.panel-heading{
 -webkit-transition: all 0.2s ease-out;
	-moz-transition: all 0.2s ease-out;
	-o-transition: all 0.2s ease-out;
	-ms-transition: all 0.2s ease-out;
	transition: all 0.2s ease-out;
}
.panel-default {
	border:none;
}
.navbar-default .navbar-toggle {
	margin-top: 22px;
}
/*** MEDIA QUERIES ***/

@media(max-width:767px){
}

@media(min-width:768px){}

@media(min-width:992px){}

@media(min-width:1200px){}

/*** END MEDIA QUERIES ***/

/* END BOOSTRAP CUSTOMIZATION
================================================== */



/* NEKO CSS FRAMEWORK
================================================== */

.iconRounded{
	border-radius: 50%;
	width: 40px;
	height: 40px;
	display: block;
	text-align: center;
	padding-top: 11px;
	
}
.iconRounded:before{margin: auto;text-align: center;}
.iconBig{
	font-size: 50px;
}
.iconBig.iconRounded{
	width: 112px;
	height: 112px;
	padding-top:29px;
	border-width: 4px;
}
.boxFeature{margin-bottom:33px;}
/* v2 */
.boxFeature-2 {text-align: center;}
.boxFeature-2 i {margin-bottom: 22px; display:block;}
.boxFeature-2 p {font-size: 17px; line-height:26px;}

.boxContent{padding:22px;}
/*** utilies classes ***/
.mb15 {
	margin-bottom:1.5em;
}
.mb30 {
	margin-bottom:3em;
}
.mb40 {
	margin-bottom:4em;
}
.mt15 {
	margin-top:1.5em;
}
.mt30 {
	margin-top:3em;
}
.mt40 {
	margin-top:4em;
}
.noMargin {
	margin:0;
}
.noPaddingBottom {
	padding-bottom:0
}
.noPaddingTop {
	padding-top:0
}

.dateField {
    color: #fff;
}
/*** end utilies classes ***/

/*** MEDIA QUERIES ***/

@media(max-width:767px){}

@media(min-width:768px){
	.isotopeItem .iconBig{
		font-size: 33px;
	}
	.isotopeItem .iconBig.iconRounded{
		width: 80px;
		height: 80px;
		padding-top: 18px;
	}
	.isotopeItem .iconLinks a span{font-size:10px;}
}

@media(min-width:992px){
	.iconBig, .isotopeItem .iconBig{
		font-size: 66px;
	}
	.iconBig.iconRounded, .isotopeItem .iconBig.iconRounded {
		width: 125px;
		height: 125px;
		padding-top: 28px;
	}
	.isotopeItem .iconLinks a span{font-size:12px;}
}

@media(min-width:1200px){}

/*** END MEDIA QUERIES ***/
/* NEKO CSS FRAMEWORK
================================================== */

/* TYPOGRAPHY
================================================== */

body {
	font-size:16px;
	line-height: 22px;
	font-family: Arial, Helvetica, sans-serif;
	-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
	-webkit-text-size-adjust: 100%;
	margin: 0;
	padding: 0;
	padding-top: 88px;
}
h1, h2, h3, h4, h5, h6, legend {
	margin:0;
	font-weight: 300;
	font-family: 'Open Sans', sans-serif;
}
h1 {
	font-size: 44px;
	line-height: 44px;
	font-weight: 300;
	font-style: normal;
	text-align:center;
	text-transform:uppercase;
	position:relative;
	letter-spacing: 0.1em;
	margin-bottom: 17px;
}

h1.noSubtitle{
	margin-bottom:90px;
}


.bigTitle, h1.bigTitle, h2.bigTitle, h3.bigTitle {
	font-weight: 800;
	font-size: 5em;
	line-height:1em;
	text-transform:uppercase;
	padding:0.5em 0;
	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
}


.paralaxText h2 {
	font-size: 3.21em;
	font-weight: 800;
	line-height:1.5em;
	text-transform:uppercase;
	padding:0.5em 0;
	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
}

.center-text {
    text-align: center;
    font-size:28px;
    color: #ffde6c;
}

.paralaxText blockquote {
	font-size: 33px;
	line-height: 33px;
	margin-bottom: 0;
	font-weight: 300;
	font-family: 'Open Sans', sans-serif;
	padding-left: 0;
	border: none;
	text-transform: uppercase;
	text-align: center;
	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
	letter-spacing: 0.1em;
}


h2 {
	font-size:24px;
	line-height: 24px;
	font-weight: 300;
	font-style: normal;
	padding:0;
	margin-bottom:17px;

}
h2.subTitle{
	font-size:24px;
	line-height: 24px;
	font-weight: 300;
	font-style: normal;
	padding:0;
	margin-bottom:90px;
	text-align:center;
}
h2.subTitle:after, h1.noSubtitle:after {
	display:block;
	height:1px;
	width:100px;
	content:'';
	bottom:-37px;
	position:absolute;
	margin-left:-50px;
	left:50%;
}



/* remove the underline on H1 when not needed */
h1.bigTitle:after, .boxWrapper h1:after, .pricingBloc h1:after, .team h1:after, .iconBoxV3 h1:after, #sliderWrapper h1:after, .fullwidthbanner-container h1:after, .camera_caption h1:after, .caption h1:after, .bulle h1:after, .iconBoxV2 .iconBox-body h1:after {
	content:none
}
h3, legend {
	font-size: 18px;
	line-height: 22px;
	margin-bottom: 14px;
	font-weight: 600;
	letter-spacing: -0.06em;
}
h4 {
	font-size: 14px;
	line-height: 22px;
	margin-bottom: 6px;
	font-style: bold;
	font-family: Arial, Helvetica, sans-serif;
	font-weight:300;
}
h5 {
	font-style: normal;
	font-weight: 300;
	font-size: 1.116em;
	line-height: 1.5714em;
	margin-bottom: 0.916em;
}
/* ... */

